@@ -152,7 +152,7 @@ If you do not already have Hadifax installed, do this:
  
 Compiling the API docs
 ----------------------
-If you are working from the CVS kdenonbeta module, to build the KTTSD API
+If you are working from the CVS kdenonbeta module, to build the KTTS API
 documents using Doxygen, proceed as follows:
 
 Add the following line (if not already present) to kdenonbeta/configure.in.in.
@@ -164,12 +164,12 @@ Then do the following commands.
   cd kdenonbeta
   make -f Makefile.cvs
   ./configure
-  cd kttsd
+  cd kttsd/libktts
   make apidox
   
-You should now have the docs in kdenonbeta/apidocs/kttsd.
+You should now have the docs in kdenonbeta/apidocs/kttsd/libktts.
 The KDE Speech API (API used by KDE applications to speak text) is in file
-apidocs/kttsd/html/classkspeech.html.
+apidocs/kttsd/libktts/html/classkspeech.html.
 
 Directories
 -----------
