@@ -9,7 +9,6 @@
 - Gunnar says Hadifax not working (can't load libhadifaxplugin, or something like that)
 - Finish Festival Client/Server plugin.
 - Festival plugin (static library) crashes on first call to library.
-- Integrate with KNotify.  Perhaps this can be done by hooking passive popups?
 - Investigate what is involved in getting Gnopernicus screen reader to use KTTSD.
 _ Figure out how to keep kttsmgr from appearing in taskbar. (Its already in the system tray.)
   Probably requires some sort of hack to KCMultiDialog.  Kopete has same behaviour, so maybe this
@@ -18,10 +17,10 @@ _ Figure out how to keep kttsmgr from appearing in taskbar. (Its already in the 
 - In the job manager tab of kttsmgr, one can drag the toolbars elsewhere, but the buttons
   disappear.  Why?
 - kttsmgr is too tall for lower res screens, mostly because of Hadifax plugin.
-  Use a vertical scroller in Properties tab and make entire screen smaller.
+  Use a vertical scroller in Properties tab and make entire screen smaller?
 _ IBM ViaVoice plugin?
 
 Widgets needed; useful for whole KDE:
 - Language selection widgets, configurable and versatile.
 - A good password line edit which will allow to set the password.
-- A Tab Widget with buttons on the tab to close (remove) the tabs (see Konversation).
+- A Tab Widget with buttons on the tab to close (remove) the tabs (ala Konversation).
